@@ -1,8 +1,8 @@
 ast_config.cmo: more_string.cmi ast_config.cmi 
 ast_config.cmx: more_string.cmx ast_config.cmi 
-check_oast.cmo: ../build/astgen/ast_oast_header.cmx ast_ast_type_descr.cmx \
+check_oast.cmo: ../build/astgen/ast_oast_header.cmx \
     ../build/general/ast_annotation.cmi 
-check_oast.cmx: ../build/astgen/ast_oast_header.cmx ast_ast_type_descr.cmx \
+check_oast.cmx: ../build/astgen/ast_oast_header.cmx \
     ../build/general/ast_annotation.cmx 
 dense_set.cmo: dense_set.cmi 
 dense_set.cmx: dense_set.cmi 
@@ -10,24 +10,16 @@ gen_accessors.cmo: more_string.cmi meta_ast.cmi ast_config.cmi
 gen_accessors.cmx: more_string.cmx meta_ast.cmx ast_config.cmx 
 gen_reflection.cmo: more_string.cmi meta_ast.cmi ast_config.cmi 
 gen_reflection.cmx: more_string.cmx meta_ast.cmx ast_config.cmx 
-gen_reflection_old.cmo: more_string.cmi meta_ast.cmi \
-    ../build/astgen/ast_reflect_type.cmx ../build/astgen/ast_oast_header.cmx \
-    ast_config.cmi ../build/general/ast_annotation.cmi 
-gen_reflection_old.cmx: more_string.cmx meta_ast.cmx \
-    ../build/astgen/ast_reflect_type.cmx ../build/astgen/ast_oast_header.cmx \
-    ast_config.cmx ../build/general/ast_annotation.cmx 
 gen_superast.cmo: more_string.cmi meta_ast.cmi ast_config.cmi 
 gen_superast.cmx: more_string.cmx meta_ast.cmx ast_config.cmx 
+gen_uplinks.cmo: more_string.cmi meta_ast.cmi ast_config.cmi 
+gen_uplinks.cmx: more_string.cmx meta_ast.cmx ast_config.cmx 
 meta_ast.cmo: more_string.cmi ../build/astgen/ast_reflect_type.cmx \
     ../build/astgen/ast_oast_header.cmx ../build/astgen/ast_ml_types.cmx \
     ast_config.cmi ../build/general/ast_annotation.cmi meta_ast.cmi 
 meta_ast.cmx: more_string.cmx ../build/astgen/ast_reflect_type.cmx \
     ../build/astgen/ast_oast_header.cmx ../build/astgen/ast_ml_types.cmx \
     ast_config.cmx ../build/general/ast_annotation.cmx meta_ast.cmi 
-meta_ast_old.cmo: more_string.cmi ../build/astgen/ast_reflect_type.cmx \
-    ../build/astgen/ast_ml_types.cmx ../build/general/ast_annotation.cmi 
-meta_ast_old.cmx: more_string.cmx ../build/astgen/ast_reflect_type.cmx \
-    ../build/astgen/ast_ml_types.cmx ../build/general/ast_annotation.cmx 
 more_string.cmo: more_string.cmi 
 more_string.cmx: more_string.cmi 
 meta_ast.cmi: ../build/astgen/ast_reflect_type.cmx \
